welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: not found: value d
var sumC= c+d
            ^blueTicket:7: error: not found: value suma
if (suma=10 || sumb=10 || sumc=10) return 10;  
    ^blueTicket:8: error: not found: value suma
if (suma=sumb+10 ||suma=sumc+10) return 5;
    ^