welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = 
{
var sum =0
var sumA= a+b
var sumB= b+c
var sumC= c+d
if (suma=10 || sumb=10 || sumc=10) return 10;  
if (suma=sumb+10 ||suma=sumc+10) return 5;
return 0; 
}
